--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@ash0080/fastify-hasura",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Fastify plugin wrapping @ash0080/hasura-sdk and graphql-request for Hasura",
   "main": "build/main",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
+  "repository": "https://github.com/ash0080/fastify-hasura",
   "scripts": {
     "pretest": "npm run lint && tsc --noEmit",
     "test": "env $(cat .env) tap --ts -j1 -R=specy -o report.tap -w test/**/*.ts",
