--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "license": "MIT",
   "dependencies": {
     "@ash0080/hasura-sdk": "^1.1.0",
-    "fastify-plugin": "^3.0.0",
+    "fastify-plugin": "4.15.0",
     "graphql": "^16.2.0",
     "graphql-request": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
-    "fastify": "^3.25.3",
+    "fastify": "^4.10.2",
     "tap": "^15.1.5",
     "ts-node": "^10.1.0",
     "typescript": "^4.5.4"
